fix c & u layout issue

--- a/src/page-sections/colleges-and-universites/custom-header/custom-header.module.scss
+++ b/src/page-sections/colleges-and-universites/custom-header/custom-header.module.scss
@@ -7,7 +7,7 @@ p {
   margin-bottom: 1em;
 }
 
-.header-banner--image {
+.banner-image {
   background: url(../../../images/colleges-and-universities/cubanner.svg) center top no-repeat;
   position: absolute;
   height: 100%;
@@ -23,32 +23,27 @@ p {
   }
 }
 
-#header__banner {
+#banner {
   p {
     margin-bottom: 25px;
   }
 }
 
-.header__blurb {
+.blurb {
   color: $mdGrey;
   font-size: 1.0625rem;
   font-weight: 300;
   line-height: 24px;
 }
 
-.header__subblurb {
+.subblurb {
   color: $darkGrey;
   font-size: 42px;
   font-weight: 300;
   line-height: 50px;
 }
 
-.header--red {
-  color: $cuRed;
-  font-weight: 900;
-}
-
-.header__subtext {
+.subtext {
   padding-top: $margin-50;
   color: $darkGrey;
   font-size: 1rem;
@@ -58,7 +53,7 @@ p {
 }
 
 @media (max-width: $phone - 1){
-  .header__subtext {
+  .subtext {
     padding-top: $margin-30;
   }
 }
